CustomGlobalExceptionHandler was refactored.
AuthenticationControllerTest added