@@ -1,11 +1,14 @@
 package com.example.trainup.exception;
 
 import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ConstraintViolationException;
 import java.nio.file.AccessDeniedException;
 import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import lombok.extern.log4j.Log4j2;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -15,13 +18,14 @@ import org.springframework.validation.FieldError;
 import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 @RestControllerAdvice
+@Log4j2
 public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler {
+
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex,
@@ -29,22 +33,64 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
             HttpStatusCode status,
             WebRequest request
     ) {
+        log.debug("Handling MethodArgumentNotValidException: {}", ex.getMessage());
         List<String> errors = ex.getBindingResult().getAllErrors().stream()
                 .map(this::getErrorMessage)
-                .toList();
+                .collect(Collectors.toList());
+        return buildResponseEntity(HttpStatus.BAD_REQUEST, "Validation error", errors);
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<Object> handleConstraintViolationException(
+            ConstraintViolationException ex) {
+        log.debug("Handling ConstraintViolationException: {}", ex.getMessage());
+        List<String> errors = ex.getConstraintViolations().stream()
+                .map(violation -> String.format(
+                        "%s: %s", violation.getPropertyPath(), violation.getMessage()))
+                .collect(Collectors.toList());
         return buildResponseEntity(HttpStatus.BAD_REQUEST, "Validation error", errors);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public Map<String, String> handleIllegalArgumentException(IllegalArgumentException ex) {
-        return Map.of("error", ex.getMessage());
+    public ResponseEntity<Object> handleIllegalArgumentException(IllegalArgumentException ex) {
+        log.debug("Handling IllegalArgumentException: {}", ex.getMessage());
+        return buildResponseEntity(HttpStatus.BAD_REQUEST, "Invalid argument",
+                List.of(ex.getMessage()));
+    }
+
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity<Object> handleEntityNotFound(EntityNotFoundException ex) {
+        log.debug("Handling EntityNotFoundException: {}", ex.getMessage());
+        return buildResponseEntity(HttpStatus.NOT_FOUND, "Entity not found",
+                List.of(ex.getMessage()));
+    }
+
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<Object> handleIllegalStateException(IllegalStateException ex) {
+        log.debug("Handling IllegalStateException: {}", ex.getMessage());
+        return buildResponseEntity(HttpStatus.FORBIDDEN, "Illegal state",
+                List.of(ex.getMessage()));
+    }
+
+    @ExceptionHandler(AccessDeniedException.class)
+    public ResponseEntity<Object> handleAccessDenied(AccessDeniedException ex) {
+        log.debug("Handling AccessDeniedException: {}", ex.getMessage());
+        return buildResponseEntity(HttpStatus.FORBIDDEN, "Access denied",
+                List.of("Access Denied"));
+    }
+
+    @ExceptionHandler(AuthorizationDeniedException.class)
+    public ResponseEntity<Object> handleAuthorizationDenied(AuthorizationDeniedException ex) {
+        log.debug("Handling AuthorizationDeniedException: {}", ex.getMessage());
+        return buildResponseEntity(HttpStatus.FORBIDDEN, "Authorization denied",
+                List.of("Access Denied"));
     }
 
     @ExceptionHandler(Exception.class)
-    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public Map<String, String> handleGenericException(Exception ex) {
-        return Map.of("error", "An unexpected error occurred: " + ex.getMessage());
+    public ResponseEntity<Object> handleGenericException(Exception ex) {
+        log.error("Handling unexpected exception: {}", ex.getMessage(), ex);
+        return buildResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error",
+                List.of("An unexpected error occurred"));
     }
 
     private String getErrorMessage(ObjectError e) {
@@ -65,28 +111,7 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
         body.put("timestamp", LocalDateTime.now());
         body.put("error", error);
         body.put("errors", errors);
+        log.debug("Building response: status={}, error={}, errors={}", status, error, errors);
         return new ResponseEntity<>(body, status);
-    }
-
-    @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity<String> handleEntityNotFound(EntityNotFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
-    }
-
-    @ExceptionHandler(IllegalStateException.class)
-    public ResponseEntity<String> handleIllegalStateException(IllegalStateException ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ex.getMessage());
-    }
-
-    @ExceptionHandler(AccessDeniedException.class)
-    @ResponseStatus(HttpStatus.FORBIDDEN)
-    public Map<String, String> handleAccessDenied(AccessDeniedException ex) {
-        return Map.of("error", "Access Denied");
-    }
-
-    @ExceptionHandler(AuthorizationDeniedException.class)
-    @ResponseStatus(HttpStatus.FORBIDDEN)
-    public Map<String, String> handleAuthorizationDenied(AuthorizationDeniedException ex) {
-        return Map.of("error", "Access Denied");
     }
 }
